# logging_wrapper

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: README.md  build_flags.cmake  build_targets.cmake  build_utils.cmake  common.cmake  coverage.cmake  custom_test_targets.cmake  docs.cmake  external_targets.cmake  main.cmake  sanitizers.cmake
doc/: Doxyfile.in  logging_wrapper.dox  loggingf_wrapper.dox  mainpage.dox  tests_page.dox
libs/logging_wrapper/: CMakeLists.txt  logging.h  logging_manager.h  manager.h  severity_level.h
libs/logging_wrapper/details/: logging_defs.h  logging_manager.cpp  loggingc_defs.h  loggingf_defs.h
libs/loggingf_wrapper/: CMakeLists.txt  logging.h  severity_level.h
libs/loggingf_wrapper/details/: loggingf_defs.h  manager.c
src/: CMakeLists.txt
src/examples/: CMakeLists.txt
src/examples/logging_boost/: CMakeLists.txt  main.cpp
src/examples/logging_clog/: CMakeLists.txt  main.cpp
src/examples/logging_printf/: CMakeLists.txt  main.cpp
src/examples/logging_quill/: CMakeLists.txt  main.cpp
src/examples/loggingf_printf/: CMakeLists.txt  main.c
src/libs/: CMakeLists.txt
src/libs/logging_wrapper/: CMakeLists.txt  logging.h  manager.h  severity_level.h
src/libs/logging_wrapper/details/: logging_defs.h  loggingf_defs.h  manager.cpp
src/libs/loggingf_wrapper/: CMakeLists.txt  logging.h  manager.h  severity_level.h
src/libs/loggingf_wrapper/details/: manager.c
src/tests/: CMakeLists.txt  ut_custom_logger.cpp  ut_custom_loggerf.cpp  ut_logging_wrapper.cpp  ut_loggingf_wrapper.cpp
tests/: ut_logging_wrapper.cpp  ut_loggingf_wrapper.cpp
